# xhec-mlops-project-student

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  environment.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yaml
notebooks/: eda.ipynb  modelling.ipynb
notebooks/prod_model/: preprocessor.pkl
src/modelling/: deployment.py  load_data.py  main.py  predicting.py  preprocessing.py  training.py  utils.py  workflow.py
src/web_service/: main.py  preprocessor.pkl  utils.py
src/web_service/lib/: inference.py  models.py  preprocessing.py
src/web_service/local_objects/: preprocessor.pkl
